fix(firefox): scrollbar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,6 +24,7 @@ div#__next,
 div#__next > div {
   min-height: 100vh;
   overflow-y: scroll;
+  scrollbar-width: none;
 }
 
 html,
